--- a/index.html
+++ b/index.html
@@ -80,7 +80,61 @@
 	<!-- =========== Header Section Ends =========== -->
 
 	<!-- =========== Main Section Starts =========== -->
+	<main id="main-section">
 
+		<!-- Hightlight Section Starts -->
+		<section id="highlight-section" class="py-5">
+			<div class="container">
+				<div class="row">
+					<div class="col shadow-lg bg-body rounded py-5 text-center mx-3">
+						<div class="highlight-image py-2">
+							<img class="img-fluid w-25" src="assets/images/icons/book.png" alt="Ibnu School Topic Book">
+						</div>
+						<div class="topic-info">
+							<h3 class="fw-bold">1500+ Topic</h3>
+							<p class="text-secondary">Learn Anythings</p>
+						</div>
+					</div>
+					<div class="col shadow bg-body rounded py-5 text-center mx-3">
+						<div class="highlight-image py-2">
+							<img class="img-fluid w-25" src="assets/images/icons/Student.png" alt="Ibnu School 1800+ Students">
+						</div>
+						<div class="topic-info">
+							<h3 class="fw-bold">9K+ Test Token</h3>
+							<p class="text-secondary">Learn Anythings</p>
+						</div>
+					</div>
+					<div class="col shadow bg-body rounded py-5 text-center mx-3">
+						<div class="highlight-image py-2">
+							<img class="img-fluid w-25" src="assets/images/icons/Test.png" alt="Ibnu School 9K+ Test Token">
+						</div>
+						<div class="topic-info">
+							<h3 class="fw-bold">2000+ Student</h3>
+							<p class="text-secondary">Learn Anythings</p>
+						</div>
+					</div>
+					<div class="col shadow bg-body rounded py-5 text-center mx-3">
+						<div class="highlight-image py-2">
+							<img class="img-fluid w-25" src="assets/images/icons/Students.png" alt="Ibnu School 2000+ Student">
+						</div>
+						<div class="topic-info">
+							<h3 class="fw-bold">1500+ Topic</h3>
+							<p class="text-secondary">Learn Anythings</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Hightlight Section Ends -->
+
+		<!-- Course Section Starts -->
+		<section id="online-courses">
+			<div class="container">
+				
+			</div>
+		</section>
+		<!-- Course Section Ends -->
+	</main>
 	<!-- =========== Main Section Ends =========== -->
 
 	<!-- =========== Footer Section Starts =========== -->
