--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 		<section id="highlight-section" class="py-5">
 			<div class="container">
 				<div class="row">
-					<div class="col shadow-lg bg-body rounded py-5 text-center mx-3">
-						<div class="highlight-image py-2">
+					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
+						<div class="highlight-image py-4">
 							<img class="img-fluid w-25" src="assets/images/icons/book.png" alt="Ibnu School Topic Book">
 						</div>
 						<div class="topic-info">
@@ -95,8 +95,8 @@
 							<p class="text-secondary">Learn Anythings</p>
 						</div>
 					</div>
-					<div class="col shadow bg-body rounded py-5 text-center mx-3">
-						<div class="highlight-image py-2">
+					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
+						<div class="highlight-image py-4">
 							<img class="img-fluid w-25" src="assets/images/icons/Student.png" alt="Ibnu School 1800+ Students">
 						</div>
 						<div class="topic-info">
@@ -104,8 +104,8 @@
 							<p class="text-secondary">Learn Anythings</p>
 						</div>
 					</div>
-					<div class="col shadow bg-body rounded py-5 text-center mx-3">
-						<div class="highlight-image py-2">
+					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
+						<div class="highlight-image py-4">
 							<img class="img-fluid w-25" src="assets/images/icons/Test.png" alt="Ibnu School 9K+ Test Token">
 						</div>
 						<div class="topic-info">
@@ -113,8 +113,8 @@
 							<p class="text-secondary">Learn Anythings</p>
 						</div>
 					</div>
-					<div class="col shadow bg-body rounded py-5 text-center mx-3">
-						<div class="highlight-image py-2">
+					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
+						<div class="highlight-image py-4">
 							<img class="img-fluid w-25" src="assets/images/icons/Students.png" alt="Ibnu School 2000+ Student">
 						</div>
 						<div class="topic-info">
@@ -128,8 +128,9 @@
 		<!-- Hightlight Section Ends -->
 
 		<!-- Course Section Starts -->
-		<section id="online-courses">
+		<section id="online-courses" class="py-5">
 			<div class="container">
+				<h1 class="mb-3 fw-bold fs-2 text-center">Online Courses</h1>
 				
 			</div>
 		</section>
