--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 					<h6 class="text-warning my-3">Are you ready to Learn?</h6>
 					<h1 class="fw-bold display-5 my-3">Learn With fun on <span class="text-success">any schedule</span>
 					</h1>
-					<p class="my-4 lh-lg text-secondary">By <span class="fst-italic">three methods</span> we may <span class="fw-bold">learn wisdom:</span> <br> First, by
-						<span class="fw-bold">reflection</span>, which is noblest; <br> Second, by <span class="fw-bold">imitation</span>, which is easiest; <br> and third by
+					<p class="my-4 lh-lg text-secondary">By <span class="fst-italic">three methods</span> we may <span
+							class="fw-bold">learn wisdom:</span> <br> First, by
+						<span class="fw-bold">reflection</span>, which is noblest; <br> Second, by <span
+							class="fw-bold">imitation</span>, which is easiest; <br> and third by
 						<span class="fw-bold">experience</span>, which is the bitterest.</p>
 					<a class="nav-link w-25 px-4 text-light btn btn-success rounded-pill" href="#">Signin</a>
 				</div>
@@ -97,7 +99,8 @@
 					</div>
 					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
 						<div class="highlight-image py-4">
-							<img class="img-fluid w-25" src="assets/images/icons/Student.png" alt="Ibnu School 1800+ Students">
+							<img class="img-fluid w-25" src="assets/images/icons/Student.png"
+								alt="Ibnu School 1800+ Students">
 						</div>
 						<div class="topic-info">
 							<h3 class="fw-bold">9K+ Test Token</h3>
@@ -106,7 +109,8 @@
 					</div>
 					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
 						<div class="highlight-image py-4">
-							<img class="img-fluid w-25" src="assets/images/icons/Test.png" alt="Ibnu School 9K+ Test Token">
+							<img class="img-fluid w-25" src="assets/images/icons/Test.png"
+								alt="Ibnu School 9K+ Test Token">
 						</div>
 						<div class="topic-info">
 							<h3 class="fw-bold">2000+ Student</h3>
@@ -115,7 +119,8 @@
 					</div>
 					<div style="background-color: #f8fffb;" class="col shadow rounded py-4 text-center mx-3">
 						<div class="highlight-image py-4">
-							<img class="img-fluid w-25" src="assets/images/icons/Students.png" alt="Ibnu School 2000+ Student">
+							<img class="img-fluid w-25" src="assets/images/icons/Students.png"
+								alt="Ibnu School 2000+ Student">
 						</div>
 						<div class="topic-info">
 							<h3 class="fw-bold">1500+ Topic</h3>
@@ -131,7 +136,38 @@
 		<section id="online-courses" class="py-5">
 			<div class="container">
 				<h1 class="mb-3 fw-bold fs-2 text-center">Online Courses</h1>
-				
+				<div class="courses">
+					<div class="card-group">
+						<div class="card">
+							<img class="card-img-top" src="..." alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">This is a wider card with supporting text below as a natural
+									lead-in to additional content. This content is a little bit longer.</p>
+								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+							</div>
+						</div>
+						<div class="card">
+							<img class="card-img-top" src="..." alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">This card has supporting text below as a natural lead-in to
+									additional content.</p>
+								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+							</div>
+						</div>
+						<div class="card">
+							<img class="card-img-top" src="..." alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">This is a wider card with supporting text below as a natural
+									lead-in to additional content. This card has even longer content than the first to
+									show that equal height action.</p>
+								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- Course Section Ends -->
