--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<!-- Course Section Starts -->
 		<section id="online-courses" class="py-5">
 			<div class="container">
-				<h1 class="mb-5 fw-bold fs-2 text-center">Online Courses</h1>
+				<h1 class="my-5 fw-bold fs-2 text-center">Online Courses</h1>
 				<div class="courses d-flex justify-content-evenly">
 					<div class="card p-3 shadow border-0" style="width: 22rem;">
 						<img src="assets/images/Morder pyschology.png" class="card-img-top" alt="...">
@@ -212,6 +212,22 @@
 			</div>
 		</section>
 		<!-- Course Section Ends -->
+
+		<!-- Testimonial Section Starts -->
+		<section id="testimonial-section">
+			<div class="container">
+				<h1 class="my-5 fw-bold fs-2 text-center">Testimonial</h1>
+				<div class="bg-body d-flex align-items-center w-75 mx-auto">
+					<div class="testimonial-user-image">
+						<img class="img-fluid w-75" src="assets/images/Man.png" alt="Ibnu School Testimonial User Image">
+					</div>
+					<div class="testimonial">
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Testimonial Section Ends -->
 	</main>
 	<!-- =========== Main Section Ends =========== -->
 
