--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					</div>
 				</div>
 			</nav>
-			<div class="banner d-flex py-5 align-items-center">
+			<div class="banner d-flex align-items-center py-5">
 				<div class="banner-text w-50">
 					<h6 class="text-warning my-3">Are you ready to Learn?</h6>
 					<h1 class="fw-bold display-5 my-3">Learn With fun on <span class="text-success">any schedule</span>
@@ -214,15 +214,19 @@
 		<!-- Course Section Ends -->
 
 		<!-- Testimonial Section Starts -->
-		<section id="testimonial-section">
+		<section id="testimonial-section" class="mb-5">
 			<div class="container">
 				<h1 class="my-5 fw-bold fs-2 text-center">Testimonial</h1>
-				<div class="bg-body d-flex align-items-center w-75 mx-auto">
+				<div class="bg-body d-flex justify-content-center align-items-center w-75 mx-auto p-4 shadow">
 					<div class="testimonial-user-image">
-						<img class="img-fluid w-75" src="assets/images/Man.png" alt="Ibnu School Testimonial User Image">
+						<img class="img-fluid w-75" src="assets/images/Man.png"
+							alt="Ibnu School Testimonial User Image">
 					</div>
 					<div class="testimonial">
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+						<p class="lh-lg">There are many variations of passages of Lorem Ipsum available, but the
+							majority have
+							suffered alteration in some form, by injected humour, or randomised words which don't look
+							even slightly believable.</p>
 					</div>
 				</div>
 			</div>
@@ -232,7 +236,59 @@
 	<!-- =========== Main Section Ends =========== -->
 
 	<!-- =========== Footer Section Starts =========== -->
-
+	<footer id="footer-section" class="py-5 bg-light">
+		<div class="container">
+			<div class="row d-flex align-items-center">
+				<div class="col m-3 me-5">
+					<ul>
+						<li>
+							<a class="mb-4" href="#">
+								<img class="img-fluid w-50" src="assets/images/icons/Logo.png"
+									alt="Ibnu School Main Logo">
+							</a>
+							<p class="lh-lg">Millions of people of all ages and from around the world are improving
+								their lives with us</p>
+						</li>
+					</ul>
+				</div>
+				<div class="col d-flex justify-content-around">
+					<div class="m-3">
+						<ul>
+							<li><a class="link-dark fw-bold" href="#">Course</a></li>
+							<li><a class="link-dark" href="#">Graphic Design</a></li>
+							<li><a class="link-dark" href="#">Web Design</a></li>
+							<li><a class="link-dark" href="#">Business</a></li>
+							<li><a class="link-dark" href="#">Marketing</a></li>
+							<li><a class="link-dark" href="#">Engineering</a></li>
+							<li><a class="link-dark" href="#">Others</a></li>
+						</ul>
+					</div>
+					<div class="m-3">
+						<ul>
+							<li><a class="link-dark fw-bold" href="#">Terms</a></li>
+							<li><a class="link-dark" href="#">Graphic Design</a></li>
+							<li><a class="link-dark" href="#">Web Design</a></li>
+							<li><a class="link-dark" href="#">Business</a></li>
+							<li><a class="link-dark" href="#">Marketing</a></li>
+							<li><a class="link-dark" href="#">Engineering</a></li>
+							<li><a class="link-dark" href="#">Others</a></li>
+						</ul>
+					</div>
+					<div class="m-3">
+						<ul>
+							<li><a class="link-dark fw-bold" href="#">Useful Link</a></li>
+							<li><a class="link-dark" href="#">Graphic Design</a></li>
+							<li><a class="link-dark" href="#">Web Design</a></li>
+							<li><a class="link-dark" href="#">Business</a></li>
+							<li><a class="link-dark" href="#">Marketing</a></li>
+							<li><a class="link-dark" href="#">Engineering</a></li>
+							<li><a class="link-dark" href="#">Others</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!-- =========== Footer Section Ends =========== -->
 
 
