Desktop Version Finished

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-	<!-- Main Style Sheets -->
-	<link rel="stylesheet" type="text/css" href="./styles/style.css" media="all" />
 </head>
 
 <body style="font-family: 'Poppins', sans-serif; background-color: #f8fffb;">
@@ -35,7 +33,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container-fluid">
 					<a class="navbar-brand w-25 pt-4" href="#">
-						<img class="img-fluid" src="assets/images/icons/Logo.png" alt="" width="30" height="24">
+						<img class="img-fluid" src="assets/images/icons/Logo.png" alt="Ibnu School Main Logo">
 					</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 						data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -64,7 +62,7 @@
 				</div>
 			</nav>
 			<div class="banner d-flex align-items-center py-5">
-				<div class="banner-text w-50">
+				<div class="banner-text">
 					<h6 class="text-warning my-3">Are you ready to Learn?</h6>
 					<h1 class="fw-bold display-5 my-3">Learn With fun on <span class="text-success">any schedule</span>
 					</h1>
@@ -217,7 +215,7 @@
 		<section id="testimonial-section" class="mb-5">
 			<div class="container">
 				<h1 class="my-5 fw-bold fs-2 text-center">Testimonial</h1>
-				<div class="bg-body d-flex justify-content-center align-items-center w-75 mx-auto p-4 shadow">
+				<div class="bg-body d-flex justify-content-center align-items-center w-75 mx-auto p-4 shadow rounded">
 					<div class="testimonial-user-image">
 						<img class="img-fluid w-75" src="assets/images/Man.png"
 							alt="Ibnu School Testimonial User Image">
@@ -240,49 +238,48 @@
 		<div class="container">
 			<div class="row d-flex align-items-center">
 				<div class="col m-3 me-5">
-					<ul>
+					<ul class="list-unstyled">
 						<li>
-							<a class="mb-4" href="#">
+							<a href="#">
 								<img class="img-fluid w-50" src="assets/images/icons/Logo.png"
 									alt="Ibnu School Main Logo">
 							</a>
-							<p class="lh-lg">Millions of people of all ages and from around the world are improving
-								their lives with us</p>
+							<p class="lh-lg mt-3">Millions of people of all ages and from around the world are improving their lives with us</p>
 						</li>
 					</ul>
 				</div>
 				<div class="col d-flex justify-content-around">
 					<div class="m-3">
-						<ul>
-							<li><a class="link-dark fw-bold" href="#">Course</a></li>
-							<li><a class="link-dark" href="#">Graphic Design</a></li>
-							<li><a class="link-dark" href="#">Web Design</a></li>
-							<li><a class="link-dark" href="#">Business</a></li>
-							<li><a class="link-dark" href="#">Marketing</a></li>
-							<li><a class="link-dark" href="#">Engineering</a></li>
-							<li><a class="link-dark" href="#">Others</a></li>
+						<ul class="list-unstyled">
+							<li><a class="link-dark text-decoration-none fw-bold" href="#">Course</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Graphic Design</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Web Design</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Business</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Marketing</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Engineering</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Others</a></li>
 						</ul>
 					</div>
 					<div class="m-3">
-						<ul>
-							<li><a class="link-dark fw-bold" href="#">Terms</a></li>
-							<li><a class="link-dark" href="#">Graphic Design</a></li>
-							<li><a class="link-dark" href="#">Web Design</a></li>
-							<li><a class="link-dark" href="#">Business</a></li>
-							<li><a class="link-dark" href="#">Marketing</a></li>
-							<li><a class="link-dark" href="#">Engineering</a></li>
-							<li><a class="link-dark" href="#">Others</a></li>
+						<ul class="list-unstyled">
+							<li><a class="link-dark text-decoration-none fw-bold" href="#">Terms</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Graphic Design</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Web Design</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Business</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Marketing</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Engineering</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Others</a></li>
 						</ul>
 					</div>
 					<div class="m-3">
-						<ul>
-							<li><a class="link-dark fw-bold" href="#">Useful Link</a></li>
-							<li><a class="link-dark" href="#">Graphic Design</a></li>
-							<li><a class="link-dark" href="#">Web Design</a></li>
-							<li><a class="link-dark" href="#">Business</a></li>
-							<li><a class="link-dark" href="#">Marketing</a></li>
-							<li><a class="link-dark" href="#">Engineering</a></li>
-							<li><a class="link-dark" href="#">Others</a></li>
+						<ul class="list-unstyled">
+							<li><a class="link-dark text-decoration-none fw-bold" href="#">Useful Link</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Graphic Design</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Web Design</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Business</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Marketing</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Engineering</a></li>
+							<li><a class="link-dark text-decoration-none" href="#">Others</a></li>
 						</ul>
 					</div>
 				</div>
